# Benote

./: .gitignore  README.md  benort.sh  pyproject.toml
benort/: __init__.py  config.py  housekeeping.py  latex.py  llm.py  oss_client.py  package.py  rag.py  responses.py  template_store.py  views.py  workspace.py
benort/templates/: editor.html
temps/: article_template.yaml  base_template.yaml  beamer_template.yaml  markdown_album.yaml  markdown_classic.yaml  markdown_contrast.yaml  markdown_dark.yaml  markdown_default.yaml  markdown_minimal.yaml  report_template.yaml
